sysdig_demo/airroute/airroute_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airroute
  labels:
    app: airroute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airroute
  template:
    metadata:
      labels:
        app: airroute
    spec:
      containers:
      - name: airroute
        image: docker.io/giriraj789/airroute:v1
        resources:
          requests:
            memory: "100Mi"
            cpu: "200m"
          limits:
            memory: "200Mi"
            cpu: "300m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: airroute
  labels:
    airroute: webserver
spec:
  selector:
    app: airroute
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 32401
