sysdig_demo/airroute/airroute_deployment_pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: air
  namespace: air
  labels:
    app: air
spec:
  replicas: 1
  selector:
    matchLabels:
      app: air
  template:
    metadata:
      labels:
        app: air
    spec:
      containers:
        - name: air
          image: docker.io/giriraj789/airroute:v1
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: "/var/www/html"
            name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: airroute
---
apiVersion: v1
kind: Service
metadata:
  name: air
  namespace: air
spec:
  selector:
    app: air
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 32500
