sysdig_demo/airroute/ingress-airroute.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: airroute
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /airroute
        backend:
          serviceName: airroute
          servicePort: 8080
